started grid layout for homepage logos, added header text to match every page and fixed header sizing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,13 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+@media screen and (max-width: 856px) {
+  .yeatman-logo {
+    padding: 45px;
   }
+  
+}
 
 .header-text {
     text-align: center;
@@ -135,7 +141,7 @@ nav .icon-burger .line {
 		z-index: 1;
 		left: 0;
 		right: 0;
-		top: 220px;
+		top: 175px;
 		bottom: 100%;
 		width: auto;
 		height: auto;
@@ -238,7 +244,7 @@ margin: 5px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
+/* Portfolio responsive layout */
 @media screen and (max-width: 860px) {
 
   .port-container {
@@ -261,6 +267,17 @@ margin: 5px;
     display: none;
   }
 
+}
+
+.code-logos {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  
+}
+
+.design-logos {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
 }
 
 .about-text {
